# valkey-operator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SUPPORT.md
.devcontainer/: devcontainer.json  post-install.sh
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: design-proposal.yml  ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: lint.yml  publish.yml  test.yml
assets/scripts/: liveness-check.sh  readiness-check.sh
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/management-api/: kustomization.yaml  manager_management_api_patch.yaml  manager_metrics_patch.yaml  service.yaml
config/manager/: kustomization.yaml  manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: kustomization.yaml  role.yaml  valkeycluster_admin_role.yaml  valkeycluster_editor_role.yaml  valkeycluster_viewer_role.yaml
config/samples/: kustomization.yaml  v1alpha1_valkeycluster-deployment.yaml  v1alpha1_valkeycluster-persistent-delete.yaml  v1alpha1_valkeycluster-persistent.yaml  v1alpha1_valkeycluster-topology-spread.yaml  (+2 more)
docs/: architecture.md  developer-guide.md  management-ui.md  quickstart.md  status-conditions.md  using-modules.md  valkeycluster.md  valkeynode-design.md
src/: api.rs  error.rs  lib.rs  main.rs  management_api.rs  valkey.rs
ui/: README.md  bun.lockb  eslint.config.mjs  next.config.ts  package.json
(+38 files in other folders)
