[package]
name = "valkey-operator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
k8s-openapi = { version = "0.27.1", features = ["latest", "schemars"] }
kube = { version = "3.1.0", features = ["client", "derive", "runtime", "rustls-tls"] }
rand = "0.10"
redis = { version = "1.2.2", default-features = false, features = ["acl", "aio", "tokio-comp", "tokio-rustls-comp"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
warp = { version = "0.4", features = ["server"] }

[dev-dependencies]
http-body-util = "0.1"
kube-client = "3.1.0"
pretty_assertions = "1.4"
tower = "0.5"
tower-test = "0.4"

[[bin]]
name = "manager"
path = "src/main.rs"
